handle optional regex group